doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.7.0_04\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;H:\Paybill;H:\LIS
-d
H:\LIS\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
H:\LIS\Accession.java
<---- end of javadoc command ---->
Loading source file H:\LIS\Accession.java...
H:\LIS\Accession.java:64: error: ';' expected
			System.out.println("P-Assam Publications")
			                                          ^
1 error
